@@ -32,11 +32,11 @@ function clippy_start_page() {
 	$return_tours['tours']['monitoring_server_step_3']['steps'] = array();
 	$return_tours['tours']['monitoring_server_step_3']['steps'][] = array(
 		'element'=> '#clippy',
-		'intro' => __('Now you must go to modules, don\'t worry I teach you.')
+		'intro' => __('Now you must go to Modules. Don\'t worry I\'ll lead you.')
 		);
 	$return_tours['tours']['monitoring_server_step_3']['steps'][] = array(
 		'element'=> "img[alt='Modules']",
-		'intro' => __('Please click in this tab.')
+		'intro' => __('Click in this tab..')
 		);
 	$return_tours['tours']['monitoring_server_step_3']['conf'] = array();
 	$return_tours['tours']['monitoring_server_step_3']['conf']['show_bullets'] = 0;
@@ -52,7 +52,7 @@ function clippy_start_page() {
 	$return_tours['tours']['monitoring_server_step_4']['steps'] = array();
 	$return_tours['tours']['monitoring_server_step_4']['steps'][] = array(
 		'element'=> '#clippy',
-		'intro' => __('Now you must create the module, don\'t worry I teach you.')
+		'intro' => __('Now you must create the module. Don\'t worry, i\'ll teach you.')
 		);
 	$return_tours['tours']['monitoring_server_step_4']['steps'][] = array(
 		'element'=> "#moduletype",
@@ -60,7 +60,7 @@ function clippy_start_page() {
 		);
 	$return_tours['tours']['monitoring_server_step_4']['steps'][] = array(
 		'element'=> "input[name='updbutton']",
-		'intro' => __('And click in this button.')
+		'intro' => __('And click the button.')
 		);
 	$return_tours['tours']['monitoring_server_step_4']['conf'] = array();
 	$return_tours['tours']['monitoring_server_step_4']['conf']['show_bullets'] = 0;
@@ -76,27 +76,27 @@ function clippy_start_page() {
 	$return_tours['tours']['monitoring_server_step_5']['steps'] = array();
 	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> '#clippy',
-		'intro' => __('Now you must create the module, don\'t worry I teach you.')
+		'intro' => __('Now you must create the module. Don\'t worry, i\'ll teach you .')
 		);
 	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> '#clippy',
-		'intro' => __('We are going to fill the form.')
+		'intro' => __('Now we are going to fill the form.')
 		);
 	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> "#network_component_group",
-		'intro' => __('Please choose the Network Management.')
+		'intro' => __('Please choose Network Management.')
 		);
 	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> "#network_component",
-		'intro' => __('And choose the component with the name "Host Alive".')
+		'intro' => __('Choose the component named "Host alive".')
 		);
 	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> "input[name='name']",
-		'intro' => __('You can change the name.')
+		'intro' => __('You can change the name if you want.')
 		);
 	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> "input[name='ip_target']",
-		'intro' => __('Check if this IP is the address of your machine.')
+		'intro' => __('Check if the IP showed is the IP of your machine.')
 		);
 	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> "input[name='crtbutton']",
@@ -116,7 +116,7 @@ function clippy_start_page() {
 	$return_tours['tours']['monitoring_server_step_6']['steps'] = array();
 	$return_tours['tours']['monitoring_server_step_6']['steps'][] = array(
 		'element'=> '#clippy',
-		'intro' => __('Now, your module is just created.<br/> And the status color is <b>blue</b>.<br/>This meaning of blue status is the module is not executed for first time.<br/>In the next seconds if there is not a problem, the status color will change to red or green.')
+		'intro' => __('Congrats! Your module has been created. <br /> and the status color is <b>blue.</b><br /> That color means that the module hasn\'t been executed for the first time. In the next seconds, if there is no problem, the status color will turn into <b>red</b> or <b>green</b>.')
 		);
 	$return_tours['tours']['monitoring_server_step_6']['conf'] = array();
 	$return_tours['tours']['monitoring_server_step_6']['conf']['show_bullets'] = 0;
