@@ -32,15 +32,15 @@ function clippy_start_page() {
 	$return_tours['tours']['monitoring_server_step_1']['steps'] = array();
 	$return_tours['tours']['monitoring_server_step_1']['steps'][] = array(
 		'element'=> '#clippy',
-		'intro' => __('I show how to ping a server.')
+		'intro' => __('I\'m going to show you how to monitor a server.')
 		);
 	$return_tours['tours']['monitoring_server_step_1']['steps'][] = array(
 		'element'=> 'input[name="search"]',
-		'intro' => __('Please type a agent to save the modules for monitoring a server.')
+		'intro' => __('Please, type an agent to save the modules for monitoring a server.')
 		);
 	$return_tours['tours']['monitoring_server_step_1']['steps'][] = array(
 		'element'=> 'input[name="srcbutton"]',
-		'intro' => __('Maybe if you typped correctly the name, you can see the agent.')
+		'intro' => __('If you have typed the name correctly you will see the agent.')
 		);
 	$return_tours['tours']['monitoring_server_step_1']['conf'] = array();
 	$return_tours['tours']['monitoring_server_step_1']['conf']['show_bullets'] = 0;
@@ -56,11 +56,11 @@ function clippy_start_page() {
 	$return_tours['tours']['monitoring_server_step_2']['steps'] = array();
 	$return_tours['tours']['monitoring_server_step_2']['steps'][] = array(
 		'element'=> '#clippy',
-		'intro' => __('Please choose the agent that you have searched.')
+		'intro' => __('Now, please choose the agent you searched.')
 		);
 	$return_tours['tours']['monitoring_server_step_2']['steps'][] = array(
 		'element'=> '#agent_list',
-		'intro' => __('Choose the agent, please click in the name.')
+		'intro' => __('Choose the agent and click on the name.')
 		);
 	$return_tours['tours']['monitoring_server_step_2']['conf'] = array();
 	$return_tours['tours']['monitoring_server_step_2']['conf']['show_bullets'] = 0;
